zz-out/pass14_run/zz-scripts/chapter05/plot_fig04_chi2_vs_T.err
  File "/home/jplal/MCGT/zz-scripts/chapter05/plot_fig04_chi2_vs_T.py", line 61
    else:
    ^^^^
SyntaxError: invalid syntax
